feat: Integrate uCrop for image cropping and update UI
Integrates the uCrop library to allow users to crop selected images from the gallery. The image is cropped to a 1:1 aspect ratio and resized to 224x224 before analysis.

Key changes include:
- Add uCrop dependency and JitPack repository.
- Implement uCrop flow in `MainActivity` after image selection.
- Add `FileProvider` to manage URIs for cropped images.
- Update `MainActivity` and `ResultActivity` layouts with CardViews for a modern look.
- Add a Toolbar with a back button to `ResultActivity`.
- Refine app theme and colors.
- Rename project theme from Asclepius to CancerDetector.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Asclepius"
+        android:theme="@style/Theme.CancerDetector"
         tools:targetApi="31">
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
             android:name="id.bytezilla.cancerdetector.view.ResultActivity"
             android:exported="false" />
@@ -24,6 +35,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
 </manifest>
